--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
   <link href="assets/css/svg-fallback.css" rel="stylesheet">
   <!-- Mobile Menu Fix CSS -->
   <link href="assets/css/mobile-menu-fix.css" rel="stylesheet">
+  <!-- Menu Conflict Fix CSS - Must be loaded last -->
+  <link href="assets/css/menu-conflict-fix.css" rel="stylesheet">
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -88,39 +90,49 @@
     </div>
 
     <nav id="navmenu" class="navmenu">
-      <ul>
-        <li><a href="https://jlucus.dev/#home" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="https://jlucus.dev/#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="https://jlucus.dev/#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="https://jlucus.dev/#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="https://jlucus.dev/#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        <li><a href="https://jlucus.dev/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li class="dropdown">
-          <a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures+</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <ul>
-            <li class="dropdown">
-              <a href="#"><span>Fused Gaming</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="https://fused.gg">Fused.gg</a></li>
-                <li><a href="https://leaderboards.vip">Leaderboards.vip</a></li>
-                <li><a href="https://lacroixla.com">Lacroixla.com</a></li>
-                <li><a href="https://cleanswipe.tv">Cleanswipe.tv</a></li>
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="https://jlucus.dev/#home" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li class="nav-item"><a href="https://jlucus.dev/#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li class="nav-item"><a href="https://jlucus.dev/#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li class="nav-item"><a href="https://jlucus.dev/#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li class="nav-item"><a href="https://jlucus.dev/#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li class="nav-item"><a href="https://jlucus.dev/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li class="nav-item dropdown">
+          <a href="#" class="dropdown-toggle">
+            <i class="bi bi-menu-button navicon"></i>
+            <span>Ventures+</span>
+            <i class="bi bi-chevron-down toggle-dropdown"></i>
+          </a>
+          <ul class="dropdown-menu">
+            <li class="dropdown-item dropdown">
+              <a href="#" class="dropdown-toggle">
+                <span>Fused Gaming</span>
+                <i class="bi bi-chevron-down toggle-dropdown"></i>
+              </a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-item"><a href="https://fused.gg">Fused.gg</a></li>
+                <li class="dropdown-item"><a href="https://leaderboards.vip">Leaderboards.vip</a></li>
+                <li class="dropdown-item"><a href="https://lacroixla.com">Lacroixla.com</a></li>
+                <li class="dropdown-item"><a href="https://cleanswipe.tv">Cleanswipe.tv</a></li>
               </ul>
             </li>
-            <li class="dropdown">
-              <a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC: Prison Queen</a></li>
-                <li><a href="https://cayc-cases-web.vercel.app">Rug Cases Concept</a></li>
+            <li class="dropdown-item dropdown">
+              <a href="#" class="dropdown-toggle">
+                <span>Art</span>
+                <i class="bi bi-chevron-down toggle-dropdown"></i>
+              </a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-item"><a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC: Prison Queen</a></li>
+                <li class="dropdown-item"><a href="https://cayc-cases-web.vercel.app">Rug Cases Concept</a></li>
               </ul>
             </li>
-            <li><a href="https://github.com/stakereloadxs">StakeReloadXS</a></li>
-            <li><a href="https://probablyfair.org">ProbablyFair.org</a></li>
-            <li><a href="https://infuze.cloud">Infuze.Cloud</a></li>
-            <li><a href="https://tokensniped.com">TokenSniped.com</a></li>
-            <li><a href="https://hubleed.com/">Hubleed</a></li>
-            <li><a href="https://formerlyincarcerated.org">Formerly Incarcerated</a></li>
-            <li><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com</a></li>
+            <li class="dropdown-item"><a href="https://github.com/stakereloadxs">StakeReloadXS</a></li>
+            <li class="dropdown-item"><a href="https://probablyfair.org">ProbablyFair.org</a></li>
+            <li class="dropdown-item"><a href="https://infuze.cloud">Infuze.Cloud</a></li>
+            <li class="dropdown-item"><a href="https://tokensniped.com">TokenSniped.com</a></li>
+            <li class="dropdown-item"><a href="https://hubleed.com/">Hubleed</a></li>
+            <li class="dropdown-item"><a href="https://formerlyincarcerated.org">Formerly Incarcerated</a></li>
+            <li class="dropdown-item"><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com</a></li>
           </ul>
         </li>
       </ul>
