--- a/index.html
+++ b/index.html
@@ -97,43 +97,11 @@
         <li class="nav-item"><a href="https://jlucus.dev/#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li class="nav-item"><a href="https://jlucus.dev/#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li class="nav-item"><a href="https://jlucus.dev/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li class="nav-item dropdown">
-          <a href="#" class="dropdown-toggle">
+        <li class="nav-item">
+          <a href="ventures.html">
             <i class="bi bi-menu-button navicon"></i>
-            <span>Ventures+</span>
-            <i class="bi bi-chevron-down toggle-dropdown"></i>
+            <span>Ventures</span>
           </a>
-          <ul class="dropdown-menu">
-            <li class="dropdown-item dropdown">
-              <a href="#" class="dropdown-toggle">
-                <span>Fused Gaming</span>
-                <i class="bi bi-chevron-down toggle-dropdown"></i>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="dropdown-item"><a href="https://fused.gg">Fused.gg</a></li>
-                <li class="dropdown-item"><a href="https://leaderboards.vip">Leaderboards.vip</a></li>
-                <li class="dropdown-item"><a href="https://lacroixla.com">Lacroixla.com</a></li>
-                <li class="dropdown-item"><a href="https://cleanswipe.tv">Cleanswipe.tv</a></li>
-              </ul>
-            </li>
-            <li class="dropdown-item dropdown">
-              <a href="#" class="dropdown-toggle">
-                <span>Art</span>
-                <i class="bi bi-chevron-down toggle-dropdown"></i>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="dropdown-item"><a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC: Prison Queen</a></li>
-                <li class="dropdown-item"><a href="https://cayc-cases-web.vercel.app">Rug Cases Concept</a></li>
-              </ul>
-            </li>
-            <li class="dropdown-item"><a href="https://github.com/stakereloadxs">StakeReloadXS</a></li>
-            <li class="dropdown-item"><a href="https://probablyfair.org">ProbablyFair.org</a></li>
-            <li class="dropdown-item"><a href="https://infuze.cloud">Infuze.Cloud</a></li>
-            <li class="dropdown-item"><a href="https://tokensniped.com">TokenSniped.com</a></li>
-            <li class="dropdown-item"><a href="https://hubleed.com/">Hubleed</a></li>
-            <li class="dropdown-item"><a href="https://formerlyincarcerated.org">Formerly Incarcerated</a></li>
-            <li class="dropdown-item"><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com</a></li>
-          </ul>
         </li>
       </ul>
     </nav>
